unpackaged/main/default/objects/Function__c/Function__c.object-meta.xml
<CustomObject>
    <label>Function</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>