unpackaged/main/default/objects/Function__c/fields/BuyerPersonaEducation__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaEducation__c</fullName>
    <label>Buyer Persona Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>