unpackaged/main/default/objects/Function__c/fields/BuyerPersonaERPHigh__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaERPHigh__c</fullName>
    <label>Buyer Persona ERP High</label>
    <length>255</length>
    <type>Text</type>
</CustomField>