unpackaged/main/default/objects/Function__c/fields/BuyerPersonaERPMiddle__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaERPMiddle__c</fullName>
    <label>Buyer Persona ERP Middle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>