unpackaged/main/default/objects/Function__c/fields/BuyerPersonaHCM__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaHCM__c</fullName>
    <label>Buyer Persona HCM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>