unpackaged/main/default/objects/Function__c/fields/BuyerPersonaRetail__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaRetail__c</fullName>
    <label>Buyer Persona Retail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>