unpackaged/main/default/objects/Function__c/fields/BuyerPersonaSMB__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaSMB__c</fullName>
    <label>Buyer Persona SMB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>