unpackaged/main/default/objects/Function__c/fields/BuyerPersonaTAX__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaTAX__c</fullName>
    <label>Buyer Persona TAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>