unpackaged/main/default/objects/Function__c/fields/FunctionId__c.field-meta.xml
<CustomField>
    <fullName>FunctionId__c</fullName>
    <label>Function Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>