unpackaged/main/default/objects/Function__c/fields/service__c.field-meta.xml
<CustomField>
    <fullName>service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service</valueSetName>
    </valueSet>
</CustomField>