unpackaged/main/default/objects/Function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Function__c</columns>
    <columns>FunctionId__c</columns>
    <columns>service__c</columns>
    <columns>BuyerPersonaCPA__c</columns>
    <columns>BuyerPersonaEducation__c</columns>
    <columns>BuyerPersonaERPHigh__c</columns>
    <columns>BuyerPersonaERPMiddle__c</columns>
    <columns>BuyerPersonaHCM__c</columns>
    <columns>BuyerPersonaPortailTPE__c</columns>
    <columns>BuyerPersonaRetail__c</columns>
    <columns>BuyerPersonaSMB__c</columns>
    <columns>BuyerPersonaTAX__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>