unpackaged/main/default/objects/Function__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>FunctionId__c</columns>
    <columns>Function__c</columns>
    <columns>service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>